[gd_scene load_steps=3 format=3 uid="uid://dashboardview"]

[ext_resource type="Script" path="res://Scripts/Dashboard.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/Navigation.gd" id="2"]

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.07, 0.11, 1)

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(1100, 0)
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 0)

[node name="HeaderRow" type="HBoxContainer" parent="Main/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="UserInfo" type="VBoxContainer" parent="Main/VBox/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserName" type="Label" parent="Main/VBox/HeaderRow/UserInfo"]
layout_mode = 2
text = "Learner"
theme_override_font_sizes/font_size = 30

[node name="LevelLabel" type="Label" parent="Main/VBox/HeaderRow/UserInfo"]
layout_mode = 2
text = "Level: A1"

[node name="GradeLabel" type="Label" parent="Main/VBox/HeaderRow/UserInfo"]
layout_mode = 2
text = "Overall: F (0%)"

[node name="ContinueButton" type="Button" parent="Main/VBox/HeaderRow"]
layout_mode = 2
text = "Continue Last Activity"
custom_minimum_size = Vector2(220, 60)

[node name="Body" type="HBoxContainer" parent="Main/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NavPanel" type="PanelContainer" parent="Main/VBox/Body"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)

[node name="NavMenu" type="VBoxContainer" parent="Main/VBox/Body/NavPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="DashboardButton" type="Button" parent="Main/VBox/Body/NavPanel/NavMenu"]
layout_mode = 2
text = "Dashboard"
metadata/section = "dashboard"

[node name="CoursesButton" type="Button" parent="Main/VBox/Body/NavPanel/NavMenu"]
layout_mode = 2
text = "Courses"
metadata/section = "courses"

[node name="ProgressButton" type="Button" parent="Main/VBox/Body/NavPanel/NavMenu"]
layout_mode = 2
text = "Progress"
metadata/section = "progress"

[node name="ProfileButton" type="Button" parent="Main/VBox/Body/NavPanel/NavMenu"]
layout_mode = 2
text = "Profile"
metadata/section = "profile"

[node name="ContentPanel" type="PanelContainer" parent="Main/VBox/Body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sections" type="Control" parent="Main/VBox/Body/ContentPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HomeSection" type="Control" parent="Main/VBox/Body/ContentPanel/Sections"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HomeVBox" type="VBoxContainer" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OverviewLabel" type="Label" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox"]
layout_mode = 2
text = "Core skills"

[node name="SkillGrid" type="GridContainer" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox"]
layout_mode = 2
columns = 2

[node name="ListeningBar" type="ProgressBar" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox/SkillGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Listening"
show_percentage = true

[node name="SpeakingBar" type="ProgressBar" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox/SkillGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speaking"
show_percentage = true

[node name="ReadingBar" type="ProgressBar" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox/SkillGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reading"
show_percentage = true

[node name="WritingBar" type="ProgressBar" parent="Main/VBox/Body/ContentPanel/Sections/HomeSection/HomeVBox/SkillGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Writing"
show_percentage = true

[node name="CoursesSection" type="Control" parent="Main/VBox/Body/ContentPanel/Sections"]
visible = false
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CoursesHolder" type="VBoxContainer" parent="Main/VBox/Body/ContentPanel/Sections/CoursesSection"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressSection" type="Control" parent="Main/VBox/Body/ContentPanel/Sections"]
visible = false
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Scroll" type="ScrollContainer" parent="Main/VBox/Body/ContentPanel/Sections/ProgressSection"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Main/VBox/Body/ContentPanel/Sections/ProgressSection/Scroll"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProfileSection" type="Control" parent="Main/VBox/Body/ContentPanel/Sections"]
visible = false
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProfileVBox" type="VBoxContainer" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DisplayName" type="LineEdit" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection/ProfileVBox"]
layout_mode = 2
placeholder_text = "Display name"

[node name="SaveNameButton" type="Button" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection/ProfileVBox"]
layout_mode = 2
text = "Save name"

[node name="LevelDropdown" type="OptionButton" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection/ProfileVBox"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection/ProfileVBox"]
layout_mode = 2
text = "Reset progress"

[node name="LogoutButton" type="Button" parent="Main/VBox/Body/ContentPanel/Sections/ProfileSection/ProfileVBox"]
layout_mode = 2
text = "Log out"

[node name="LessonSection" type="Control" parent="Main/VBox/Body/ContentPanel/Sections"]
visible = false
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Main/VBox/Body/ContentPanel/Sections/LessonSection"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackButton" type="Button" parent="Main/VBox/Body/ContentPanel/Sections/LessonSection/VBox"]
layout_mode = 2
text = "Back to courses"

[node name="LessonHolder" type="Control" parent="Main/VBox/Body/ContentPanel/Sections/LessonSection/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
*** End File